<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="10"
        android:title="Tìm kiếm"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_brightness_6_24dp"
        android:orderInCategory="90"
        android:title="@string/theme_settings"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/theme_light"
                android:title="@string/theme_light" />
            <item
                android:id="@+id/theme_dark"
                android:title="@string/theme_dark" />
            <item
                android:id="@+id/theme_system"
                android:title="@string/theme_system" />
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>